# OpenGl_Entities

./: .gitignore  CMakeLists.txt  OpenGl_Entities.sln  README.md
OpenGl_Entities/: OpenGl_Entities.vcxproj  OpenGl_Entities.vcxproj.filters
OpenGl_Entities/Shaders/: sprite_shader.frag  sprite_shader.vert  tilemap_shader.vert
res/levels/: Map_1.tmx
res/shaders/: sprite_shader.vert  tilemap_shader.frag  tilemap_shader.vert
source/: Animation.hpp  Color.cpp  Color.hpp  Geometry.hpp  Rectangle.hpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  TileMap.cpp  TileMap.hpp  main.cpp  tinyxml2.cpp  tinyxml2.h
